# archive

./: .pre-commit-config.yaml  Makefile  pyproject.toml  readme.md  setup.py
archive/: __init__.py  archive.py  compress.py  extract.py  util.py
src/archive/: __init__.py  archive.py  compress.py  extract.py  util.py
tests/: conftest_utils.py  test_different_fs.py  test_simple.py
