[project]
name = "archive"
version = "0.1.0"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[project.scripts]
archive = "archive:entry_point"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.black]
target-version = ["py312"]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
force_single_line = true
